tests/error/misc_errors/return_not_annotated_none1.py
from guppylang.decorator import guppy


@guppy
def foo():
    return
